kubernetes/apps/database/pgadmin/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
  annotations:
    gethomepage.dev/description: "pgAdmin is a web-based administration tool for PostgreSQL"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: pgadmin
    gethomepage.dev/group: Infra
    gethomepage.dev/name: pgAdmin
spec:
  hostnames:
    - "${APP}.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: ${APP}
          namespace: database
          port: ${APP_PORT}
